# pc-exp

./: .gitignore  CMakeLists.txt  README.md
doc/: exp_1.docx  exp_2.docx  table_1.docx  table_3.docx  table_4.docx  table_5.docx  ~$able_1.docx  ~$able_3.docx  ~$exp_3.docx
src/: mpi_code_compiler.sh  pi_mpi.cpp  pi_openmp.cpp  prime_mpi.cpp
src/mpi/: CMakeLists.txt  PSRS_mpi.cpp  floyd_mpi.cpp  montCarlo_mpi.cpp  mpi_code_compiler.sh  nBody_mpi.cpp  pi_mpi.cpp
src/openmp/: CMakeLists.txt  prime_openmp.cpp
